// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner border renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: dotted 4px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: inset 12px #7D4CDB;
  border-bottom: inset 12px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 4px transparent;
  border-top: solid 4px #7D4CDB;
  border-bottom: solid 4px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 4px #33333310;
  border-right: solid 4px #7D4CDB;
  border-top: solid 4px #7D4CDB;
  border-left: solid 4px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 4px #7D4CDB;
  border-bottom: solid 4px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

@media only screen and (max-width:768px) {
  .c1 {
    border: dotted 4px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-top: inset 6px #7D4CDB;
    border-bottom: inset 6px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border: solid 4px transparent;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border-top: solid 4px #7D4CDB;
    border-bottom: solid 4px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border: solid 4px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-right: solid 4px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-top: solid 4px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-left: solid 4px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-top: solid 4px #7D4CDB;
    border-bottom: solid 4px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding: 6px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;

exports[`Spinner renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

@media only screen and (max-width:768px) {
  .c1 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    border-top: solid 1px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c1"
    id="test id"
    name="test name"
  />
</div>
`;

exports[`Spinner round renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 12px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 48px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

@media only screen and (max-width:768px) {
  .c1 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    border-top: solid 1px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-top: solid 1px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-radius: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border-top: solid 1px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border-radius: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-top: solid 1px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-radius: 24px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
</div>
`;

exports[`Spinner should have no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

@media only screen and (max-width:768px) {
  .c1 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    border-top: solid 1px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 6px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</div>
`;

exports[`Spinner size renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 18px;
  width: 18px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 2px #33333310;
  border-top: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 4px #33333310;
  border-top: solid 4px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 48px;
  width: 48px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 12px #33333310;
  border-top: solid 12px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 72px;
  width: 72px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 24px #33333310;
  border-top: solid 24px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 96px;
  width: 96px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

@media only screen and (max-width:768px) {
  .c1 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    border-top: solid 1px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border: solid 2px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-top: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border: solid 4px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border-top: solid 4px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border: solid 6px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-top: solid 6px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border: solid 12px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-top: solid 12px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding: 6px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;

exports[`Spinner size renders 2`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #6FFFB0;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #00873D;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #3D138D;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #00739D;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #A2423D;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

@media only screen and (max-width:768px) {
  .c1 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    border-top: solid 1px #6FFFB0;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-top: solid 1px #00873D;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border-top: solid 1px #3D138D;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-top: solid 1px #00739D;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-top: solid 1px #A2423D;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding: 6px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;

exports[`Spinner spinner changes according to theme 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background: red;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 30px;
  width: 30px;
  padding: 48px;
  border-radius: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gNoyFE 0.9s 0s infinite linear;
  animation: gNoyFE 0.9s 0s infinite linear;
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 24px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    border-radius: 12px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;

exports[`Spinner spinner icon changes according to theme 1`] = `
.c2 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 72px;
  height: 72px;
  fill: #FD6FFF;
  stroke: #FD6FFF;
}

.c2 g {
  fill: inherit;
  stroke: inherit;
}

.c2 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c2 *[stroke*="#"],
.c2 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c2 *[fill-rule],
.c2 *[FILL-RULE],
.c2 *[fill*="#"],
.c2 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 72px;
  width: 72px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gNoyFE 0.9s 0s infinite linear;
  animation: gNoyFE 0.9s 0s infinite linear;
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      aria-label="Node"
      className="c2"
      viewBox="0 0 24 24"
    >
      <path
        d="M11.8988601,24 C11.5774615,24 11.2582643,23.9156879 10.9764902,23.7534477 L8.04053599,22.0152536 C7.60202502,21.7700221 7.81599724,21.6832885 7.96062661,21.6333176 C8.54530789,21.4285911 8.66396121,21.3823625 9.28804684,21.0279435 C9.35364738,20.9905204 9.43950043,21.0037286 9.50664192,21.043353 L11.7621556,22.3817801 C11.843606,22.4258073 11.9591774,22.4258073 12.034684,22.3817801 L20.8291183,17.3054433 C20.9105686,17.2592148 20.9634012,17.1645563 20.9634012,17.0676964 L20.9634012,6.91942563 C20.9634012,6.81816306 20.9105686,6.72790729 20.8273572,6.677276 L12.0364451,1.60534197 C11.9549948,1.55691204 11.8471281,1.55691204 11.7656778,1.60534197 L2.97652685,6.677276 C2.89133421,6.72570593 2.83718075,6.82036442 2.83718075,6.91722427 L2.83718075,17.0654951 C2.83718075,17.1623549 2.89001339,17.254812 2.97366508,17.3010406 L5.3819532,18.6923003 C6.6895612,19.3461043 7.48865497,18.5756282 7.48865497,17.8007494 L7.48865497,7.78456021 C7.48865497,7.64147179 7.60092434,7.53140378 7.74401276,7.53140378 L8.85790105,7.53140378 C8.99658675,7.53140378 9.11105748,7.64147179 9.11105748,7.78456021 L9.11105748,17.8051521 C9.11105748,19.5486294 8.16006985,20.5502483 6.50684829,20.5502483 C5.99833407,20.5502483 5.59768651,20.5502483 4.4793955,19.9999083 L2.17236995,18.6702867 C1.60221764,18.3400826 1.25,17.7237018 1.25,17.0654951 L1.25,6.91722427 C1.25,6.25681619 1.60221764,5.64043532 2.17236995,5.314634 L10.9756096,0.236095888 C11.5325538,-0.0786986292 12.2722108,-0.0786986292 12.8247522,0.236095888 L21.6169851,5.31683536 C22.184936,5.64483804 22.539355,6.25901755 22.539355,6.91942563 L22.539355,17.0676964 C22.539355,17.7259031 22.184936,18.3400826 21.6169851,18.6702867 L12.8247522,23.7488248 C12.5429781,23.9117255 12.2237809,23.9953771 11.8979796,23.9953771 L11.8988601,24 Z M14.6153387,17.007159 C10.7673609,17.007159 9.9605624,15.2407875 9.9605624,13.7592721 C9.9605624,13.618385 10.0741526,13.5061157 10.2152598,13.5061157 L11.3511617,13.5061157 C11.4766392,13.5061157 11.5823045,13.5974721 11.6021167,13.7214087 C11.7738228,14.8788839 12.2845384,15.4626847 14.6113762,15.4626847 C16.4649216,15.4626847 17.2530085,15.0439859 17.2530085,14.0610786 C17.2530085,13.495329 17.0284698,13.0748692 14.1490906,12.7930951 C11.7408024,12.5553482 10.2526829,12.0248203 10.2526829,10.0986301 C10.2526829,8.32433374 11.7496079,7.26768082 14.2569572,7.26768082 C17.072497,7.26768082 18.4681594,8.24508478 18.6442682,10.3451825 C18.6508723,10.4178273 18.624456,10.4882709 18.576026,10.5411035 C18.5275961,10.5917348 18.4593539,10.6225539 18.3889104,10.6225539 L17.2464044,10.6225539 C17.127531,10.6225539 17.0240671,10.5389022 16.9998521,10.4244314 C16.7246821,9.20707921 16.0598713,8.81743844 14.2525545,8.81743844 C12.2295044,8.81743844 11.9939589,9.52187372 11.9939589,10.0502002 C11.9939589,10.690796 12.2713303,10.8779116 15.001017,11.2389347 C17.7042874,11.5977564 18.9876804,12.1040693 18.9876804,14.0038432 C18.9876804,15.9190266 17.3894929,17.0175054 14.6025708,17.0175054 L14.6153387,17.007159 Z"
        fill="#689F63"
      />
    </svg>
  </div>
</div>
`;
